--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "mount-routes": "^1.0.3",
     "open": "0.0.5",
     "qn": "^1.1.0",
+    "request": "^2.83.0",
     "serve-favicon": "~2.2.1",
     "simditor-qn": "^1.0.2",
     "uploadify": "^1.0.7"
